--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,10 +9,14 @@
     <title>StoryBook</title>
 </head>
 <body>
-<div class="conteiner">
+<div class="container">
+    {{> _header}}
     {{{body}}}
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script>
+    M.Sidenav.init(document.querySelector('.sidenav'))
+</script>
 </body>
 </html>
