--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,35 @@
 <h1>Dashboard</h1>
+<h3>Welcome {{name}}</h3>
+
+{{#if stories}}
+    <table class="strioed">
+        <thread>
+            <tr>
+                <th>
+                    Title
+                </th>
+                <th>
+                    Date
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                    title
+                </th>
+            </tr>
+        </thread>
+        <tbody>
+        {{#each stories}}
+            <tr>
+                <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+                <td>{{createdAt}}</td>
+                <td><span class="dash-status>">{{status}}</span></td>
+                <td></td>
+            </tr>
+        {{/each}}
+        </tbody>
+    </table>
+{{else}}
+    <p>If have note created any stories</p>
+{{/if}}
